<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/iv_terre"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_terre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_birth_hour"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:background="@drawable/ui_input"
        android:gravity="center"
        android:hint="@string/birth_hour"
        android:textColor="#fff"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_terre" />

    <TextView
        android:id="@+id/tv_birth_day"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/ui_input"
        android:gravity="center"
        android:hint="@string/birth_date"
        android:textColor="#fff"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_birth_hour" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/ui_age_result"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_birth_day">

        <LinearLayout
            style="@style/ll_year_month_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/years" />

            <TextView
                android:id="@+id/tv_years"
                style="@style/tv_result_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/ll_year_month_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days" />

            <TextView
                android:id="@+id/tv_days"
                style="@style/tv_result_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/ll_year_month_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/months" />

            <TextView
                android:id="@+id/tv_months"
                style="@style/tv_result_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/ll_year_month_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours" />

            <TextView
                android:id="@+id/tv_hours"
                style="@style/tv_result_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/ll_year_month_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes" />

            <TextView
                android:id="@+id/tv_minutes"
                style="@style/tv_result_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_your_age_is"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/your_age_is"
        android:textColor="#acacac"
        android:textSize="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_birth_day" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:background="@drawable/btn_join"
        android:text="@string/join_adventure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:background="@drawable/btn_delete"
        android:text="@string/delete_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
