<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_planets"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@+id/iv_planets">

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ui_age_result"
            android:orientation="horizontal"
            android:padding="20dp">

            <LinearLayout
                style="@style/ll_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/tv_year_month_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days" />

                <TextView
                    android:id="@+id/tv_days"
                    style="@style/tv_result_year_month_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/tv_year_month_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/or"
                    android:textSize="26dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/tv_year_month_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/years" />

                <TextView
                    android:id="@+id/tv_years"
                    style="@style/tv_result_year_month_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Name"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#fff" />
    </RelativeLayout>


</RelativeLayout>